--- a/api3_qrng/foundry.toml
+++ b/api3_qrng/foundry.toml
@@ -3,5 +3,9 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 
+remappings = [
+    'forge-std/=lib/forge-std/src/', 
+    'airnode-protocol=lib/airnode/packages/airnode-protocol'
+]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
